--- a/cores/riscv-reward/checks.cfg
+++ b/cores/riscv-reward/checks.cfg
@@ -1,6 +1,7 @@
 
 [options]
 isa rv32i
+nret 1
 
 [depth]
 insn            20
@@ -12,9 +13,10 @@ unique    1  10 30
 causal    10    30
 
 [defines]
-# `define RISCV_FORMAL_ALIGNED_MEM
+`define RISCV_FORMAL_ALIGNED_MEM
 # `define RISCV_FORMAL_ALTOPS
 `define CALU_DIRECT
+`define FORMAL
 
 [defines liveness]
 #`define VEXRISCV_FAIRNESS
